lib/device_screen_brightness_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Bindings for device_screen_brightness native library.
class DeviceScreenBrightnessBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  DeviceScreenBrightnessBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  DeviceScreenBrightnessBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  DeviceScreenBrightnessResult device_screen_brightness_get() {
    return _device_screen_brightness_get();
  }

  late final _device_screen_brightness_getPtr =
      _lookup<ffi.NativeFunction<DeviceScreenBrightnessResult Function()>>(
        'device_screen_brightness_get',
      );
  late final _device_screen_brightness_get = _device_screen_brightness_getPtr
      .asFunction<DeviceScreenBrightnessResult Function()>();

  DeviceScreenBrightnessResult device_screen_brightness_set(int value) {
    return _device_screen_brightness_set(value);
  }

  late final _device_screen_brightness_setPtr =
      _lookup<
        ffi.NativeFunction<DeviceScreenBrightnessResult Function(ffi.Int32)>
      >('device_screen_brightness_set');
  late final _device_screen_brightness_set = _device_screen_brightness_setPtr
      .asFunction<DeviceScreenBrightnessResult Function(int)>();

  DeviceScreenBrightnessResult device_screen_brightness_increment() {
    return _device_screen_brightness_increment();
  }

  late final _device_screen_brightness_incrementPtr =
      _lookup<ffi.NativeFunction<DeviceScreenBrightnessResult Function()>>(
        'device_screen_brightness_increment',
      );
  late final _device_screen_brightness_increment =
      _device_screen_brightness_incrementPtr
          .asFunction<DeviceScreenBrightnessResult Function()>();

  DeviceScreenBrightnessResult device_screen_brightness_decrement() {
    return _device_screen_brightness_decrement();
  }

  late final _device_screen_brightness_decrementPtr =
      _lookup<ffi.NativeFunction<DeviceScreenBrightnessResult Function()>>(
        'device_screen_brightness_decrement',
      );
  late final _device_screen_brightness_decrement =
      _device_screen_brightness_decrementPtr
          .asFunction<DeviceScreenBrightnessResult Function()>();
}

final class DeviceScreenBrightnessResult extends ffi.Struct {
  @ffi.Int32()
  external int value;

  @ffi.Int32()
  external int min;

  @ffi.Int32()
  external int max;

  @ffi.Int32()
  external int reserved;

  @ffi.Int32()
  external int error_code;
}

const int DSB_OK = 0;

const int DSB_UNSUPPORTED_OPERATION = 1;

const int DSB_PERMISSION_DENIED = 2;

const int DSB_NATIVE_FAILURE = 3;

const int DSB_INVALID_VALUE = 4;

const int DSB_BACKEND_NOT_AVAILABLE = 5;
